--- a/src/routes/_index/+page.marko
+++ b/src/routes/_index/+page.marko
@@ -1,29 +1,68 @@
 <div.container>
-  <header>
-    <img.logo src="./logo.svg" alt="Marko"/>
-  </header>
   <main>
-    <p>Edit <code>./src/routes/_index/+page.marko</code> and save to reload.</p>
-    <a href="https://markojs.com/docs/getting-started">
-      Learn Marko
-    </a>
+    <div class="">
+    <img.logo src="./logo.svg" alt="Marko"/>
+    </div>
+    <div class="container">
+      <div className="inner-container">
+        <h2 class="header">
+          You’ve just ignited a new
+          <span class="library">Marko</span> static site!
+        </h2>
+        <span class="pathname">
+          
+        </span>
+      </div>
+      <p class="footer">Made in Nigeria with 💖</p>
+    </div>
   </main>
 </div>
-<mouse-mask/>
+
+
 
 style {
-  .container {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: clamp(1em, 2vw, 2em); 
-    padding: 1em;
-    box-sizing: border-box;
-    height:100%;
-    width:100%;
-  }
-  img.logo {
-    width:12em;
-  }
+ main {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
 }
+.logo {
+  width: 200px;
+  height: 200px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 17px;
+}
+.inner-container {
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+}
+.header {
+  font-size: 36px;
+  font-weight: 400;
+  color: #344054;
+}
+.pathname {
+  color: #004eeb;
+  font-size: 20px;
+}
+.footer {
+  font-size: 20px;
+  font-weight: 500;
+  color: #344054;
+}
+.library {
+  color: #00dc82;
+  font-weight: 600;
+}
+}
+
+
